[package]
name = "create-neon-yarn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-latest"]